--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "browserslist": "> 0.25%, not dead",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "build": "parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
