--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "parcel": "^2.11.0"
+    "cssnano": "^6.0.3",
+    "parcel": "^2.11.0",
+    "postcss": "^8.4.33"
   }
 }
